--- a/pages/page11/index.html
+++ b/pages/page11/index.html
@@ -14,7 +14,11 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-column-start 属性，grid-column-end 属性<br>grid-row-start 属性，grid-row-end 属性</div>
+    <div class="page-title">
+        <span>grid-column-start 属性，grid-column-end 属性</span>
+        <br>
+        <span>grid-row-start 属性，grid-row-end 属性</span>
+    </div>
     <pre class="code">
         .item1 {
             grid-column-start: 2;
