--- a/pages/page13/index.html
+++ b/pages/page13/index.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid justify-content属性 align-content属性 place-content属性</title>
+    <title>Grid grid-area属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">justify-content 属性，align-content 属性，place-content 属性</div>
+    <div class="page-title">grid-area 属性</div>
     <pre class="code">
-            .container {
-                grid: 10px;
-            }</pre>
+        .container {
+            grid-template-areas: 'a b c' 'd e f' 'g h i';
+        }
+        .item1 {
+            grid-area: e;
+        }</pre>
     <div class="container container1">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
@@ -31,123 +34,10 @@
         <div class="item item9">9</div>
     </div>
     <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: start;
+        .item1 {
+            grid-area: 1 / 1 / 3 / 3;
         }</pre>
     <div class="container container2">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: end;
-        }</pre>
-    <div class="container container3">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: center;
-        }</pre>
-    <div class="container container4">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: stretch;
-        }</pre>
-    <div class="container container5">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-around;
-        }</pre>
-    <div class="container container6">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-between;
-        }</pre>
-    <div class="container container7">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-evenly;
-        }</pre>
-    <div class="container container8">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            place-content: space-around space-evenly;
-        }</pre>
-    <div class="container container9">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
         <div class="item item3">3</div>
